Date.parse() doesn't properly handle input outside of ES Spec limits https://bugs.webkit.org/show_bug.cgi?id=185868

Reviewed by Mark Lam.

JSTests:

New test.

* stress/date-parse-ranges.js: Added.
(shouldBe):
(throw.new.Error):
(shouldBeNaN):

Source/WTF:

Clamped date creation to +/-100,000,000 days relative to midnight at the beginning
of 01 January, 1970 UTC as per ecma262/#sec-time-values-and-time-range and
ecma262/#sec-date-time-string-format.

* wtf/DateMath.cpp:
(WTF::ymdhmsToSeconds):
(WTF::parseES5DateFromNullTerminatedCharacters):


Canonical link: https://commits.webkit.org/201365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232122 268f45cc-cd09-0410-ab3c-d52691b4dbfc